use 2.0.0 release of mongojack

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 	coreCompile 'io.core9:core-api:+'
 	apiCompile 'org.mongodb:mongo-java-driver:+' // TODO REMOVE FROM API
 	apiCompile 'io.core9:module-database-api:+'
-	implCompile 'org.mongojack:mongojack:+'
+	implCompile 'org.mongojack:mongojack:2.0.0'
 	testCompile 'com.github.fakemongo:fongo:1.3.7'
 	testCompile 'org.slf4j:slf4j-log4j12:+'
 }
